--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </main>
 
   <footer class="footer">
-    <p>© 2025 BlackTrace. Все права защищены.</a></p>
+    <p>© 2025 BlackTrace. Все права защищены.</p>
   </footer>
 </body>
 </html>
