--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <li>🔎 Восстановление удалённых сообщений</li>
         <li>🧠 Извлечение резервных копий</li>
         <li>💬 Реконструкция чатов Telegram, Instagram, WhatsApp</li>
+        <li>⚠️ Удалённый контроль украденного телефона</li>
         <li>🕵️ Анонимность и конфиденциальность гарантированы</li>
       </ul>
       <p>Наша команда помогает восстановить переписки, даже если они были удалены много месяцев назад. Истории клиентов говорят сами за себя:</p>
@@ -59,7 +60,8 @@
       <h2>Отзывы клиентов</h2>
       <ul>
         <li>💬 "Отличная работа! Быстро, безопасно, эффективно." — Аноним</li>
-        <li>💬 "Сомневался, но результат впечатлил." — Клиент из Москвы</li>
+        <li>💬 "До сих пор не верю! 2 месяца назад у меня украли телефон — команда получила удалённый доступ и вычислила вора."</li>
+        <li>💬 "Сомневался, но результат впечатлил." — Артём</li>
         <li>💬 "Порекомендую друзьям. Спасибо за профессионализм!" — Доверенный клиент</li>
       </ul>
     </div>
