--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </header>
 
   <main class="container" id="home">
-    <h1 class="title">👁‍🗨 BlackTrace</h1>
+    <h1 class="title">BlackTrace</h1>
     <p class="subtitle">Восстановление удалённых переписок Telegram, Instagram, WhatsApp</p>
 
     <div class="buttons">
