--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BlackTrace | Восстановление переписок</title>
-  <link rel="stylesheet" href="assets/css/tyle.css">
+  <link rel="stylesheet" href="assets/css/style.css">
   <script defer src="assets/js/script.js"></script>
   <style>
     .intro-logo {
